export type AuthStackParamList = {
  Phone: undefined
  OTP: { phone: string }
  ProfileSetup: undefined
  Done: undefined
}

export type MainTabParamList = {
  Home: undefined
  Search: undefined
  Cart: undefined
  Orders: undefined
  Profile: undefined
}
